tests/lean/structSorryBug.lean
set_option relaxedAutoBoundImplicitLocal false
instance has_arr : HasArr Preorder := { Arr := Function }

def foo : Nat := { first := 10 }
